# CPP-Examples

docs/: conf.py  index.rst
staticLinking/: README.md
staticLinking/mylib/: CMakeLists.txt
staticLinking/mylib/include/: myClass.h
staticLinking/mylib/src/: myClass.cpp
staticLinking/myproj/: .gitignore  CMakeLists.txt
staticLinking/myproj/src/: main.cpp
